# open_pulse

./: .env.example  .gitignore  README.md  README_CN.md  agentos.py  pyproject.toml  reader.md  requirements.txt  scheduler.py  trigger_agent.sh  trigger_workflow.sh  view_newsletter_with_cover.py
agent-ui/: package-lock.json  package.json
agent-ui/src/: store.ts
agent-ui/src/api/: os.ts  routes.ts
agent-ui/src/app/: page.tsx
agent-ui/src/components/chat/ChatArea/ChatInput/: ChatInput.tsx
agent-ui/src/components/chat/Sidebar/: EntitySelector.tsx  ModeSelector.tsx  Sidebar.tsx
agent-ui/src/components/chat/Sidebar/Knowledge/: AddKnowledgeDialog.tsx  Knowledge.tsx  KnowledgeBlankState.tsx  KnowledgeItem.tsx  UploadFileDialog.tsx  UploadTextDialog.tsx  ViewKnowledgeDialog.tsx  index.ts
agent-ui/src/components/chat/Sidebar/Memory/: AddMemoryDialog.tsx  EditMemoryDialog.tsx  Memory.tsx  MemoryBlankState.tsx  MemoryItem.tsx  index.ts
agent-ui/src/components/chat/Sidebar/Sessions/: Sessions.tsx
agent-ui/src/components/notifications/: NewsletterNotificationCard.tsx
agent-ui/src/components/ui/icon/: constants.tsx  types.ts
agent-ui/src/hooks/: useAIStreamHandler.tsx  useChatActions.ts  useNotificationStream.tsx  useSessionLoader.tsx
agent-ui/src/types/: os.ts
agents/: __init__.py  digest_agent.py  newsletter_agent.py  social_agent.py
config/: __init__.py  memory_config.py  settings.py
docs/: COVER_IMAGE_IMPLEMENTATION.md  CUSTOM_READER_GUIDE.md  EMAIL_SETUP.md  NEWSLETTER_COVER_GUIDE.md  NOTIFICATION.md  README.md  README_EN.md  SCHEDULER_GUIDE.md  STORAGE_GUIDE.md  WORKFLOW_SUMMARY.md  sqlite数据库处理.md
readers/: README.md  __init__.py  jina_reader.py  registry.py
services/: __init__.py  email_service.py
test/: test.json  test_jina_reader.py  test_storage.py  test_workflow.py  test_workflow_with_cover.py
tools/: __init__.py  mcp_tools.py
workflows/: __init__.py  newsletter_generation.py  newsletter_generation_simple.py  notification_manager.py
