[project]
name = "open-pulse"
version = "0.1.0"
description = "Open Pulse - AI Newsletter Generation System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno==2.1.0",
    "annotated-types==0.7.0",
    "anthropic==0.69.0",
    "anyio==4.11.0",
    "apscheduler==3.11.0",
    "arxiv==2.2.0",
    "attrs==25.3.0",
    "authlib==1.6.4",
    "beautifulsoup4==4.14.2",
    "cachetools==6.2.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "chonkie[openai,st]==1.3.1",
    "click==8.3.0",
    "cohere==5.18.0",
    "cryptography==46.0.2",
    "cyclopts==3.24.0",
    "deprecation==2.1.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "docutils==0.22.2",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.118.0",
    "fastapi-cli==0.0.13",
    "fastapi-cloud-cli==0.2.1",
    "fastavro==1.12.0",
    "fastmcp==2.12.4",
    "feedparser==6.0.12",
    "filelock==3.19.1",
    "fsspec==2025.9.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "google==3.0.0",
    "google-api-python-client>=2.184.0",
    "google-auth==2.41.1",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai==1.41.0",
    "h11==0.16.0",
    "hf-xet==1.1.10",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.35.3",
    "idna==3.10",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "jiter==0.11.0",
    "jsonschema==4.25.1",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "lance-namespace==0.0.6",
    "lance-namespace-urllib3-client==0.0.17",
    "lancedb==0.25.1",
    "lazy-object-proxy==1.12.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mcp==1.15.0",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "numpy==2.3.3",
    "openai==2.0.1",
    "openapi-core==0.19.5",
    "openapi-pydantic==0.5.1",
    "openapi-schema-validator==0.6.3",
    "openapi-spec-validator==0.7.2",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "parse==1.20.2",
    "pathable==0.4.4",
    "pillow==11.3.0",
    "praw>=7.8.1",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.11.0",
    "pygments==2.19.2",
    "pylance==0.38.0",
    "pypdf==6.1.1",
    "pyperclip==1.11.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "referencing==0.36.2",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rich==14.1.0",
    "rich-rst==1.3.1",
    "rich-toolkit==0.15.1",
    "rignore==0.6.4",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "sentry-sdk==2.39.0",
    "sgmllib3k==1.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlalchemy==2.0.43",
    "sse-starlette==3.0.2",
    "starlette==0.48.0",
    "tantivy==0.25.0",
    "tenacity==9.1.2",
    "tokenizers==0.22.1",
    "tqdm==4.67.1",
    "tweepy>=4.16.0",
    "typer==0.19.2",
    "types-requests==2.32.4.20250913",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "uvicorn==0.37.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "werkzeug==3.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["."]
